(executables
 (names
   hfun
   ; htbl -- disabled for OCaml 5.0.0
 )
 (libraries)
 (modes js))

(rule
 (target hfun.referencejs)
 (deps hfun.bc.js ../../../LICENSE)
 (action
  (with-stdout-to
   %{target}
   (run node ./hfun.bc.js))))

(rule
 (alias runtest)
 (deps hfun.referencejs hfun.reference)
 (action
  (diff hfun.referencejs hfun.reference)))

; (rule
;  (target htbl.referencejs)
;  (deps htbl.bc.js ../../../LICENSE)
;  (action
;   (with-stdout-to
;    %{target}
;    (run node ./htbl.bc.js))))

; (rule
;  (alias runtest)
;  (deps htbl.reference htbl.referencejs)
;  (action
;   (diff htbl.reference htbl.referencejs)))
